Fix pyproject.toml structure and deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,21 @@
 [project]
-name = "ritual-cli"
-version = "0.1.0"
+name = "ritual"
+version = "0.1.1"
 description = "Cryptographic signing and verification CLI using PGPy for RitualMesh."
-authors = [{name = "Victor Jose Corral", email = "victorjcorral@icloud.com"}]
-license = {text = "Metal Snake License (TBA)"}
-dependencies = ["pgpy>=0.6.0"]
+authors = [{ name = "Victor Jose Corral", email = "victorjcorral@icloud.com" }]
+license = { text = "Metal Snake License (TBA)" }
 requires-python = ">=3.7"
+
+dependencies = [
+    "pgpy>=0.6.0",
+    "requests",
+    "cryptography"
+]
 
 [project.scripts]
 ritual = "ritual:main"
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
