Fix entry point to ritual_cli:main

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [project.scripts]
-ritual = "ritual:main"
+ritual = "ritual_cli:main"
 
 [build-system]
 requires = ["setuptools", "wheel"]
